# security-view

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: globals.cpp  globals.hpp  main.cpp  types.hpp  utils.hpp
src/threads/: db.hpp  detection.hpp  embedding.hpp  fps.hpp  recording.hpp  retina.hpp  server.hpp
tools/: CMakeLists.txt  extract_faces.cpp  generate_embedding_db.cpp
web/: admin.html  index.html  login.html
web/css/: admin.css  login.css  style.css
web/js/: admin.js  index.js  login.js  router.js
web/pages/: admin.html  dashboard.html
